fixed footer overflow issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -112,7 +112,7 @@ a {
     color: #0ba021; }
 
 footer {
-  padding: 40px 0;
+ 
   background-color: #3B3B3B; }
 
 @media screen and (max-width: 992px) {
