--- a/css/style.css
+++ b/css/style.css
@@ -677,7 +677,7 @@ color:#fff;
 -------------------------------------------------------- */
 footer {
   background: #1c1c1c;
-  padding: 30px;
+  
 }
 footer p {
   font-size: 13px;
